--- a/package.json
+++ b/package.json
@@ -2,12 +2,10 @@
   "name": "angapp2",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "start": "nodemon server.js",
+      "dev": "ng build --output-path ./dist/ANGapp2 --watch",
+      "build": "ng build --prod --output-path ./dist/ANGapp2"
   },
   "private": true,
   "dependencies": {
@@ -19,8 +17,20 @@
     "@angular/platform-browser": "~9.1.7",
     "@angular/platform-browser-dynamic": "~9.1.7",
     "@angular/router": "~9.1.7",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "collections": "^5.1.11",
+    "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
+    "ejs": "^3.1.3",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.5.9",
+    "mongoose": "^5.9.19",
     "newsapi": "^2.4.0",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "path": "^0.12.7",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "videogular": "^2.2.1",
